# kobuki_ros

kobuki_auto_docking/: CMakeLists.txt  package.xml
kobuki_auto_docking/src/: auto_docking_ros.cpp  sensor_state_agg.cpp
kobuki_description/: package.xml
kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro
