<?xml version="1.0"?>
<package format="3">
  <name>kobuki_auto_docking</name>
  <version>0.8.0</version>
  <description>
	    Automatic docking for Kobuki:
	    Users owning a docking station for Kobuki can use this tool to let Kobuki find its nest autonomously.
  </description>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="yhju@yujinrobot.com">Younghun Ju</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
  <url type="website">http://ros.org/wiki/kobuki_auto_docking</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ecl_linear_algebra</depend>
  <depend>geometry_msgs</depend>
  <depend>kobuki_core</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>message_filters</depend>
  <depend>orocos_kdl</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_kdl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
